[gd_scene format=3]

[ext_resource type="Script" path="res://Templates/UI/save_slot_panel.gd" id="1"]

[node name="SaveSlotPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 420.0
offset_bottom = 390.0
theme_override_constants/separation = 8

[node name="Slots" type="ItemList" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Save" type="Button" parent="VBox/Buttons"]
layout_mode = 2
text = "保存"

[node name="Load" type="Button" parent="VBox/Buttons"]
layout_mode = 2
text = "读取"

[node name="Delete" type="Button" parent="VBox/Buttons"]
layout_mode = 2
text = "删除"

[node name="Refresh" type="Button" parent="VBox/Buttons"]
layout_mode = 2
text = "刷新"

[node name="Status" type="Label" parent="VBox"]
layout_mode = 2
text = "状态"

[connection signal="pressed" from="VBox/Buttons/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBox/Buttons/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="VBox/Buttons/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="VBox/Buttons/Refresh" to="." method="_on_refresh_pressed"]
